# langchain-falcon-chainlit

./: langchain_falcon.ipynb  langchain_falcon_basic.py  pyproject.toml
