[tool.poetry]
name = "langchain-falcon-chainlit"
version = "0.1.0"
description = ""
authors = ["Avi Bathula <avib-dev@outlook.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.1.20"
huggingface-hub = "^0.23.0"
chainlit = "^1.1.101"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
